# gsem

./: .gitignore  API_COMPAT.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  publish.yml
bench/: .gitignore  benchmark.R  benchmark_perf.R  compare_outputs.R  debug_ldsc.R  diag_cfgwas_vs_usergwas.R  generate_bench_data.R  patch_genomicsem.R  r_pipeline.R  run_benchmark.sh  run_python_bench.py  setup.sh  setup_data.R  verify_commonfactorGWAS_patch.R
bench/out_compare/: rust_merged.tsv
bindings/python/: .gitignore  README.md  pyproject.toml
bindings/python/genomicsem/: __init__.py  _enrich.py  _pa_ldsc.py  _sim.py
bindings/python/src/rust/: Cargo.toml
bindings/python/src/rust/src/: conversions.rs  lib.rs
bindings/r/: .Rbuildignore  .gitignore  API_COMPAT.md  DESCRIPTION  NAMESPACE  README.md  configure  configure.win
bindings/r/R/: commonfactor.R  commonfactorGWAS.R  convert_hdl_panels.R  enrich.R  hdl.R  internal_threads.R  ldsc.R  multiGene.R  multiSNP.R  munge.R  paLDSC.R  rgmodel.R  s_ldsc.R  simLDSC.R  summaryGLS.R  sumstats.R  userGWAS.R  usermodel.R  write_model.R
bindings/r/man/: commonfactor.Rd  commonfactorGWAS.Rd  convert_hdl_panels.Rd  dot-covstruc_as_list.Rd  dot-resolve_num_threads.Rd  dot-snp_columnar_to_df.Rd  enrich.Rd  hdl.Rd  ldsc.Rd  multiGene.Rd  multiSNP.Rd  munge.Rd  paLDSC.Rd  rgmodel.Rd  s_ldsc.Rd  simLDSC.Rd  summaryGLS.Rd  sumstats.Rd  userGWAS.Rd  usermodel.Rd  write.model.Rd
bindings/r/src/: Makevars  Makevars.win  entrypoint.c
bindings/r/src/rust/: Cargo.toml
bindings/r/src/rust/src/: conversions.rs  lib.rs
crates/gsem/: Cargo.toml  README.md
crates/gsem-cli/: Cargo.toml
crates/gsem-cli/src/: main.rs
crates/gsem-ldsc/: Cargo.toml
crates/gsem-ldsc/benches/: ldsc_bench.rs
crates/gsem-ldsc/src/: annot_reader.rs  covariance.rs  error.rs  hdl.rs  heritability.rs  jackknife.rs  liability.rs  lib.rs  regression.rs  stratified.rs  weights.rs
crates/gsem-matrix/: Cargo.toml
crates/gsem-matrix/benches/: matrix_bench.rs
crates/gsem-matrix/src/: error.rs  lib.rs  near_pd.rs  smooth.rs  vech.rs
crates/gsem-py/: Cargo.toml  pyproject.toml
crates/gsem-py/src/: conversions.rs  lib.rs  py_exports.rs
crates/gsem-r/: Cargo.toml
crates/gsem-r/src/: conversions.rs  lib.rs  r_exports.rs
crates/gsem-sem/: Cargo.toml
crates/gsem-sem/benches/: sem_bench.rs
crates/gsem-sem/src/: commonfactor.rs  delta.rs  error.rs  estimator.rs  fit_indices.rs  jacobian.rs  lib.rs  model.rs  q_factor.rs  reorder.rs  rgmodel.rs  sandwich.rs  syntax.rs  write_model.rs
crates/gsem/src/: lib.rs  main.rs  sumstats.rs
crates/gsem/src/gwas/: add_snps.rs  common_factor.rs  gc_correction.rs  mod.rs  multi_snp.rs  q_snp.rs  user_gwas.rs
crates/gsem/src/io/: column_detect.rs  gwas_reader.rs  hdl_reader.rs  ld_reader.rs  mod.rs  sumstats_reader.rs  twas_reader.rs  writer.rs
crates/gsem/src/munge/: allele.rs  mod.rs  qc.rs
crates/gsem/src/plot/: manhattan.rs  mod.rs  qq.rs  scree.rs
crates/gsem/src/stats/: enrich.rs  gls.rs  mod.rs  parallel_analysis.rs  simulation.rs
crates/gsem/tests/: r_validation.rs
tests/: generate_gwas_fixture.R  generate_reference.R
tests/fixtures/: commonfactor.json  cov_to_cor.json  gwas_per_snp.json  near_pd.json  reorder.json  s_full.json  sem_1factor.json  sem_2factor.json  v_full.json  v_snp_conservative.json  v_snp_none.json  v_snp_standard.json  vech_3x3.json  vech_4x4.json  z_pre.json
