[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "genomicsem"
version = "0.1.0"
description = "Rust-accelerated Genomic Structural Equation Modeling"
license = {text = "GPL-3.0"}
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]

[tool.maturin]
manifest-path = "src/rust/Cargo.toml"
