[package]
name = "gsem-cli"
description = "CLI for Genomic Structural Equation Modeling"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gsem"
path = "src/main.rs"

[dependencies]
gsem = { workspace = true, features = ["plot"] }
gsem-matrix = { workspace = true }
gsem-ldsc = { workspace = true }
gsem-sem = { workspace = true }
faer = { workspace = true }
statrs = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
flate2 = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
