[package]
name = "gsem-ldsc"
description = "LD Score Regression engine with block jackknife for genetic covariance estimation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gsem-matrix = { workspace = true }
faer = { workspace = true }
statrs = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "ldsc_bench"
harness = false
