[package]
name = "gsem-py"
description = "Python bindings for GenomicSEM-rs via PyO3"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
gsem = { workspace = true }
gsem-matrix = { workspace = true }
gsem-ldsc = { workspace = true }
gsem-sem = { workspace = true }
faer = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
# pyo3 = { workspace = true }    # Enable when building Python wheel
# numpy = { workspace = true }   # Enable when building Python wheel
