[package]
name = "gsem-r"
description = "R bindings for GenomicSEM-rs via extendr"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
gsem = { workspace = true }
gsem-matrix = { workspace = true }
gsem-ldsc = { workspace = true }
gsem-sem = { workspace = true }
faer = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
# extendr-api = { workspace = true }  # Enable when R toolchain available
