[package]
name = "gsem-r"
description = "R bindings for GenomicSEM-rs via extendr"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "lib"]

[features]
default = []
extendr = ["dep:extendr-api"]

[dependencies]
gsem = { workspace = true }
gsem-matrix = { workspace = true }
gsem-ldsc = { workspace = true }
gsem-sem = { workspace = true }
faer = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
extendr-api = { workspace = true, optional = true }
