[package]
name = "gsem-sem"
description = "Minimal structural equation modeling engine: DWLS/ML estimation, lavaan syntax, sandwich SEs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gsem-matrix = { workspace = true }
faer = { workspace = true }
statrs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "sem_bench"
harness = false
