[package]
name = "gsemr"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[lib]
crate-type = ["staticlib"]
name = "gsemr"

[dependencies]
extendr-api = "0.8"
gsem = { path = "../../../../crates/gsem" }
gsem-matrix = { path = "../../../../crates/gsem-matrix" }
gsem-ldsc = { path = "../../../../crates/gsem-ldsc" }
gsem-sem = { path = "../../../../crates/gsem-sem" }
faer = "0.24"
log = "0.4"
